fix mobile spacing

--- a/style.css
+++ b/style.css
@@ -946,7 +946,7 @@ NAVBAR
     .projects,
     .certificates,
     .contact {
-        margin: 80px auto 0;
+        margin: 60px auto 0;
     }
 
     .hero {
